--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>Efthemios Hatzis-Star Wars</title>
 </head>
 <body>
@@ -18,11 +19,7 @@
 
 		<div class="row">
 			<div class="col-md-6">
-			<div id="buttons"></div>
-				<button id="obiWan"></button>
-				<button>Luke</button>
-				<button>Darth Sidious</button>
-				<button>Darth Maul</button>
+			<div id="character1">ssf</div>
 			</div>
 		</div>
 
