all characters now move to the correct spots when clicked on

--- a/index.html
+++ b/index.html
@@ -18,33 +18,66 @@
 		</div>
 
 		<div class="row">
-			<div class="col-md-6">
-			<div id="character1">ssf</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Your Character</h2>
-				<div id="yourChar"></div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Enemies Available To Attack</h2>
-				<h2>Fight Section</h2>
-				<button class="btn btn-normal">Attack</button>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-md-6">
-				<h2>Defender</h2>
-				<div id="defender">
-					
+				<div class= 'col-md-3 character' id="character1">
+					<h3 id="c1">Obi-Wan Kenobi</h3>
+					<img src="assets/images/obiwan.jpg" width="100%">
+					<h3 id="c1H">120</h3>
 				</div>
+
+				<div class= 'col-md-3 character' id="character2">
+					<h3 id="c2">Luke Skywalker</h3>
+					<img src="assets/images/obiwan.jpg" width="100%">
+					<h3 id="c2H">100</h3>
+				</div>
+
+				<div class= 'col-md-3 character' id="character3">
+					<h3 id="c3">Darth Sidious</h3>
+					<img src="assets/images/obiwan.jpg" width="100%">
+					<h3 id="c3H">150</h3>
+				</div>	
+
+				<div class= 'col-md-3 character' id="character4">
+					<h3 id="c4">Darth Maul</h3>
+					<img src="assets/images/obiwan.jpg" width="100%">
+					<h3 id="c4H">100</h3>
+				</div>		
+		</div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Your Character</h2>
 			</div>
+		</div>
+
+		<div class="row" id="yourChar">
+
+		</div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Enemies Available To Attack</h2>
+			</div>
+		</div>
+
+		<div class="row" id="enemiesAvailable">
+
+		</div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Fight Section</h2>
+				<button class="btn btn-normal attackBtn">Attack</button>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Defender</h2>
+			</div>
+		</div>
+
+		<div class="row" id="defender">
+
 		</div>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
