--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		<div class="row" id="defender">
 
 		</div>
+		<h4 id="messages"></h4>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	<script src = "assets/javascript/game.js" type="text/javascript"></script>
