--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 				<div class= 'col-md-3 character' id="character1">
 					<h3 id="c1">Obi-Wan Kenobi</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
-					<h3 id="c1H">120</h3>
+					<h3 class="HP">120</h3>
 				</div>
 
 				<div class= 'col-md-3 character' id="character2">
 					<h3 id="c2">Luke Skywalker</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
-					<h3 id="c2H">100</h3>
+					<h3 class="HP">100</h3>
 				</div>
 
 				<div class= 'col-md-3 character' id="character3">
 					<h3 id="c3">Darth Sidious</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
-					<h3 id="c3H">150</h3>
+					<h3 class="HP">150</h3>
 				</div>	
 
 				<div class= 'col-md-3 character' id="character4">
 					<h3 id="c4">Darth Maul</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
-					<h3 id="c4H">100</h3>
+					<h3 class="HP">100</h3>
 				</div>		
 		</div>
 
