--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row" id="originalChars">
 				<div class= 'col-md-3 character' id="character1">
 					<h3 id="c1">Obi-Wan Kenobi</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
@@ -39,7 +39,7 @@
 				<div class= 'col-md-3 character' id="character4">
 					<h3 id="c4">Darth Maul</h3>
 					<img src="assets/images/obiwan.jpg" width="100%">
-					<h3 class="HP">100</h3>
+					<h3 class="HP">180</h3>
 				</div>		
 		</div>
 
@@ -50,7 +50,6 @@
 		</div>
 
 		<div class="row" id="yourChar">
-
 		</div>
 
 		<div class="row">
@@ -66,7 +65,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h2>Fight Section</h2>
-				<button class="btn btn-normal attackBtn">Attack</button>
+				<button class="btn btn-danger attackBtn">Attack</button>
 			</div>
 		</div>
 
@@ -79,7 +78,9 @@
 		<div class="row" id="defender">
 
 		</div>
-		<h4 id="messages"></h4>
+		<h4 id="message1"></h4>
+		<h4 id="message2"></h4>
+		<h5 id="message3"></h5>
 	</div>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 	<script src = "assets/javascript/game.js" type="text/javascript"></script>
